@@ -9,6 +9,12 @@ This document contains a list of changes for each release of Krang.
 
 =item *
 
+In Krang::History, replaced constants FIELDS, OBJECT_TYPES AND ACTIONS
+with methods fields(), object_types() and actions()
+respectively. [Bodo Schulze]
+
+=item *
+
 Allow multiple word action names in admin scheduler. [Bodo Schulze]
 
 =item *
